--- a/src/templates/project.html
+++ b/src/templates/project.html
@@ -1,40 +1,36 @@
 <div class="containers full-height">
 
-	<div class="content">
-
-		<div class="container-fluid">
-			<div class="row m-t-50">
-				<div class="col-sm-6" ng-repeat="container in project.containers">
-					<div class="panel panel-color panel-containers">
-						<div class="panel-body">
-							<h4>{{container.name}}</h4>
-						</div>
-						<div class="panel-footer">
-							<span class="pull-right">
-								<a ui-sref="container.logs({id: container.id})" title="{{'Logs'|translate}}">
-									<i class="stream stream-window-list"></i>
-									<span>{{'Logs'|translate}}</span>
-								</a>
-								<a ui-sref="container.container({id: container.id})" title="{{'Container'|translate}}">
-									<i class="stream stream-box"></i>
-									<span>{{'Container'|translate}}</span>
-								</a>
-								<a ui-sref="container.image({id: container.id})" title="{{'Image'|translate}}">
-									<i class="fa fa-clone"></i>
-									<span>{{'Image'|translate}}</span>
-								</a>
-								<a ui-sref="container.configuration({id: container.id})" title="{{'Configuration'|translate}}">
-									<i class="stream stream-cog"></i>
-									<span>{{'Configuration'|translate}}</span>
-								</a>
-							</span>
-							<div class="clearfix"></div>
-						</div>
+	<div class="container-fluid full-height" ng-scrollbars>
+		<div class="row m-t-50">
+			<div class="col-sm-6" ng-repeat="container in project.containers">
+				<div class="panel panel-color panel-containers">
+					<div class="panel-body">
+						<h4>{{container.name}}</h4>
+					</div>
+					<div class="panel-footer">
+						<span class="pull-right">
+							<a ui-sref="container.logs({id: container.id})" title="{{'Logs'|translate}}">
+								<i class="stream stream-window-list"></i>
+								<span>{{'Logs'|translate}}</span>
+							</a>
+							<a ui-sref="container.container({id: container.id})" title="{{'Container'|translate}}">
+								<i class="stream stream-box"></i>
+								<span>{{'Container'|translate}}</span>
+							</a>
+							<a ui-sref="container.image({id: container.id})" title="{{'Image'|translate}}">
+								<i class="fa fa-clone"></i>
+								<span>{{'Image'|translate}}</span>
+							</a>
+							<a ui-sref="container.configuration({id: container.id})" title="{{'Configuration'|translate}}">
+								<i class="stream stream-cog"></i>
+								<span>{{'Configuration'|translate}}</span>
+							</a>
+						</span>
+						<div class="clearfix"></div>
 					</div>
 				</div>
 			</div>
 		</div>
-
 	</div>
 
 </div>
