Fixed progress bars style

--- a/src/templates/pullDialog.html
+++ b/src/templates/pullDialog.html
@@ -10,7 +10,7 @@
 						<div class="col-xs-2"><span>{{layer.id}}</span></div>
 						<div class="col-xs-3"><span>{{layer.status}}</span></div>
 						<div class="col-xs-7">
-							<uib-progressbar ng-if="layer.progressDetail.percent" value="layer.progressDetail.percent">
+							<uib-progressbar ng-if="layer.progressDetail.percent" type="color" value="layer.progressDetail.percent">
 								<span>{{layer.progressDetail.percent}} %</span>
 							</uib-progressbar>
 						</div>
