--- a/src/css/container.css
+++ b/src/css/container.css
@@ -10,8 +10,8 @@
 	right: 0;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	/*visibility: hidden;*/
-	/*opacity: 0;*/
+	visibility: hidden;
+	opacity: 0;
 	transition: opacity 500ms ease;
 	background-color: rgba(255, 255, 255, 0.9);
 }
@@ -29,10 +29,6 @@
 .log-action-bar:hover {
 	visibility: visible;
 	opacity: 1;
-}
-
-.log-action-bar i {
-	/*color: #32afb2;*/
 }
 
 .log-action-bar .switch {
