--- a/src/templates/container_logs.html
+++ b/src/templates/container_logs.html
@@ -1,5 +1,5 @@
 <div class="log full-height">
-	<log ng-class="{'invisible': stream != 'stdout'}" ng-model="searchResult['out']" locked="stdoutScrollbarLocked" class="stdout full-absolute"></log>
+	<log ng-class="{'invisible': stream != 'stdout'}" ng-model="searchResult['stdout']" locked="stdoutScrollbarLocked" class="stdout full-absolute"></log>
 	<!-- <log ng-class="{'invisible': stream != 'stdout'}" ng-model="container.runtime.docker.container.log['stdout']" locked="stdoutScrollbarLocked" class="stdout full-absolute"></log> -->
 	<log ng-class="{'invisible': stream != 'stderr'}" ng-model="searchResult['stderr']" locked="stderrScrollbarLocked" class="stderr full-absolute"></log>
 	<!-- <log ng-class="{'invisible': stream != 'stderr'}" ng-model="container.runtime.docker.container.log['stderr']" locked="stderrScrollbarLocked" class="stderr full-absolute"></log> -->
@@ -8,7 +8,7 @@
 <div class="log-action-bar">
 	<div class="log-action-bar-container">
 		<div style="flex-grow: 0">
-			<switch ng-model="ctrl.stderr" on="stderr" off="stdout" class="color" title="{{'Switch stream'|translate}}"></switch>
+			<switch ng-model="ctrl.streamIsStderr" on="stderr" off="stdout" class="color" title="{{'Switch stream'|translate}}"></switch>
 		</div>
 		<div style="flex: 1">
 			<input type="text" class="form-control" ng-model="searchString" placeholder="{{'Search in logs'|translate}}" />
