Updated how to show the action bar in log screen: now react on mouse move, and stay displayed if searching

--- a/src/css/container.css
+++ b/src/css/container.css
@@ -25,7 +25,7 @@
 	margin: 0 5px;
 }
 
-.tab-content .log:hover ~ .log-action-bar ,
+.tab-content .log.show ~ .log-action-bar ,
 .log-action-bar:hover {
 	visibility: visible;
 	opacity: 1;
