--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -6,6 +6,15 @@
 	-webkit-app-region: drag;
 	-webkit-user-select: none;
 	margin-bottom: 0;
+
+	position: initial;
+}
+
+@media (min-width: 768px) {
+.navbar-collapse.collapse {
+	height: 100% !important;
+	padding-top: 15px;
+}
 }
 
 .navbar-header {
@@ -14,7 +23,11 @@
 
 @media (min-width: 768px) {
 .sidebar {
-  margin-top: 65px;
+	/*margin-top: 65px;*/
+
+	top: 65px;
+	margin-top: 0;
+	bottom: 30px;
 }
 }
 
@@ -55,6 +68,7 @@
 	top: 0;
 	right: 60px;
 	height: 100px;
+	z-index: 2;
 }
 
 @media (min-width: 768px) {
@@ -64,17 +78,24 @@
 }
 }
 
+.navbar-color .sidebar li a {
+	position: relative;
+	display: block;
+	padding: 10px 15px;
+	/*padding-left: 37px;*/
+}
+
 .navbar-color .nav > li > a {
 	color: #eee;
 	background-color: transparent;
 }
 
-.navbar-color .sidebar .nav > li > a {
+/*.navbar-color .sidebar .nav > li > a {
 	color: #eee;
-}
+}*/
 
 @media (min-width: 768px) {
-.navbar-color .sidebar .nav > li > a {
+.navbar-color .sidebar .nav li > a {
 	color: #32afb2;
 }
 }
