--- a/src/templates/project.html
+++ b/src/templates/project.html
@@ -5,7 +5,9 @@
 			<div class="col-sm-6" ng-repeat="container in project.containers">
 				<div class="panel panel-color panel-containers">
 					<div class="panel-body">
-						<h4>{{container.name}}</h4>
+						<a ui-sref="container.logs({id: container.id})" title="{{'Logs'|translate}}">
+							<h4>{{container.name}}</h4>
+						</a>
 					</div>
 					<div class="panel-footer">
 						<span class="pull-right">
