--- a/src/templates/container_container.html
+++ b/src/templates/container_container.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<h4>{{'Container'|translate}} <small>{{container.id}} (#{{container.runtime.infos.container.id}})</small></h4>
-				<pre pretty-json="container.runtime.infos.container.infos"></pre>
+				<pre pretty-json="container.runtime.infos.container"></pre>
 			</div>
 		</div>
 	</div>
