Corrected button color in pull image dialog

--- a/src/templates/pullDialog.html
+++ b/src/templates/pullDialog.html
@@ -32,7 +32,7 @@
 					</span>
 				</div>
 				<div class="col-xs-2">
-					<button type="button" class="btn btn-default pull-right" ng-click="ctrl.cancel()">{{'Close'|translate}}</button>
+					<button type="button" class="btn btn-primary pull-right" ng-click="ctrl.cancel()">{{'Close'|translate}}</button>
 				</div>
 			</div>
 		</div>
