--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -4,7 +4,7 @@
 			<span class="sr-only">{{'Toggle navigation'|translate}}</span>
 			<span class="fa fa-bars"></span>
 		</button>
-		<a class="navbar-brand no-drag" ui-sref="project">
+		<a class="navbar-brand no-drag" ui-sref="about" title="{{'About Dugout'|translate}}">
 			<h2>Dugout</h2>
 			<img src="images/logo.png" />
 		</a>
