Corrected "about" template Added translations

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -7,10 +7,10 @@
 
 				<h2>{{pkg.name}} <small>version {{pkg.version}}</small></h2>
 
-				<span>{{'Last release:'}} {{lastVersion}}</span><br />
+				<span>{{'Last available version:'|translate}} {{lastVersion}}</span><br />
 
 				<span ng-if="lastVersion > pkg.version">
-					{{'Your Dugout version is outdated, please download a new one at '}}
+					{{'Your Dugout version is outdated, please download a new one at '|translate}}
 					<a external-link href="https://github.com/mobapi/dugout/releases/latest">https://github.com/mobapi/dugout/releases/latest</a>
 				</span>
 			</div>
