Added socket connection to non-linux platform (to use with docker beta)

--- a/src/templates/configuration.html
+++ b/src/templates/configuration.html
@@ -34,7 +34,7 @@
 
 				<h4>Docker</h4>
 
-				<div ng-if="platform == 'linux'" class="row">
+				<div class="row">
 					<div class="col-xs-12">
 						<div class="form-group">
 							<label>{{'Connection to docker daemon'|translate}}</label>
