--- a/src/templates/container_container.html
+++ b/src/templates/container_container.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12">
-				<h4>{{'Container'|translate}} <small>{{container.id}} (#{{container.runtime.infos.container.id}})</small></h4>
+				<h4>{{container.label}} <small>{{container.name}} (#{{container.runtime.infos.container.Id}})</small></h4>
 				<pre pretty-json="container.runtime.infos.container"></pre>
 			</div>
 		</div>
