--- a/src/templates/container_image.html
+++ b/src/templates/container_image.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<div>
-					<h4 class="pull-left">{{'Image'|translate}} <small>{{container.image}}</small></h4>
+					<h4 class="pull-left">{{container.image}}<small></small></h4>
 					<div class="pull-right">
 						<a class="btn btn-primary" ng-click="ctrl.pullImage()">
 							<i class="fa fa-download"></i>
