Corrected "pull image" dialog Added "pull image" CTA when an image is unavailable

--- a/src/templates/container_configuration.html
+++ b/src/templates/container_configuration.html
@@ -1,6 +1,7 @@
 <div class="full-height" ng-scrollbars>
 	<div class="container-fluid">
-		<div class="row">
+		<div ng-show="container.variablesLength" class="row">
+		<!-- <div ng-show="container.variables.length" class="row"> -->
 			<div class="col-xs-12">
 				<h4>{{'Variables'|translate}}</h4>
 			</div>
