--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -68,13 +68,17 @@
 							</a>
 							<span class="abs-r-15 abs-t-5">
 								<span  ng-if="$root.globalConfMgr.valid && container.runtime.configurationValid">
+									<button ng-if="!container.runtime.infos.image.infos.Id" class="btn btn-default btn-sm pull-right" ng-click="ctrl.pullImage(container)" title="{{'Pull image'|translate}}">
+										<i class="fa fa-download"></i>
+									</button>
 									<button ng-if="container.runtime.canStart" class="btn btn-primary btn-sm" ng-click="ctrl.start(container)" title="{{'Start container'|translate}}">
 										<i class="fa fa-play"></i>
 									</button>
 									<button ng-if="container.runtime.canStop" class="btn btn-danger btn-sm pull-right" ng-click="ctrl.stop(container)" title="{{'Stop container'|translate}}">
 										<i class="fa fa-stop"></i>
 									</button>
-									<button ng-if="!container.runtime.canStart && !container.runtime.canStop" class="btn btn-default btn-sm pull-right">
+									<!-- <button ng-if="!container.runtime.canStart && !container.runtime.canStop" class="btn btn-default btn-sm pull-right"> -->
+									<button ng-if="container.runtime.infos.container.state.Starting || container.runtime.infos.container.state.Stopping" class="btn btn-default btn-sm pull-right">
 										<i class="fa fa-spinner fa-spin"></i>
 									</button>
 								</span>
