--- a/src/templates/project.html
+++ b/src/templates/project.html
@@ -1,29 +1,36 @@
 <div class="containers full-height">
-
 	<div class="container-fluid full-height" ng-scrollbars>
 		<div class="row m-t-50">
 			<div class="col-sm-6" ng-repeat="container in project.containers">
+{{container.runtime.infos.container.state}}
 				<div class="panel panel-color panel-containers">
 					<div class="panel-body">
-						<a ui-sref="container.logs({id: container.id})" title="{{'Logs'|translate}}">
-							<h4>{{container.name}}</h4>
+						<a ui-sref="container.logs({name: container.name})" title="{{'Logs'|translate}}">
+							<h4>
+								{{container.label}}
+								<small>
+									{{container.image}}
+									<span ng-show="!container.runtime.infos.image.infos.Id">({{'Missing image'|translate}})</span>
+									<a ng-show="!container.runtime.infos.image.infos.Id" href="" ng-click="ctrl.pullImage(container)">{{'Download'|translate}}</a>
+								</small>
+							</h4>
 						</a>
 					</div>
 					<div class="panel-footer">
 						<span class="pull-right">
-							<a ui-sref="container.logs({id: container.id})" title="{{'Logs'|translate}}">
+							<a ui-sref="container.logs({name: container.name})" title="{{'Logs'|translate}}">
 								<i class="stream stream-window-list"></i>
 								<span>{{'Logs'|translate}}</span>
 							</a>
-							<a ui-sref="container.container({id: container.id})" title="{{'Container'|translate}}">
+							<a ui-sref="container.container({name: container.name})" title="{{'Container'|translate}}">
 								<i class="stream stream-box"></i>
 								<span>{{'Container'|translate}}</span>
 							</a>
-							<a ui-sref="container.image({id: container.id})" title="{{'Image'|translate}}">
+							<a ui-sref="container.image({name: container.name})" title="{{'Image'|translate}}">
 								<i class="fa fa-clone"></i>
 								<span>{{'Image'|translate}}</span>
 							</a>
-							<a ui-sref="container.configuration({id: container.id})" title="{{'Configuration'|translate}}">
+							<a ui-sref="container.configuration({name: container.name})" title="{{'Configuration'|translate}}">
 								<i class="stream stream-cog"></i>
 								<span>{{'Configuration'|translate}}</span>
 							</a>
